# YYGgywh

./: .gitignore  README.md  calendar_test_page_design.md  field_mapping_validation_report.md  key_mapping_check_report.md  package-lock.json  response.json  start_project.bat  test_api.py  test_calendar_structure.py  test_dateinputgroup.html  test_encoding.py  test_ganzhi_year.py  test_page.py  verify_ganzhi_year.py  verify_jieqi_conversion.py
backend/: .gitignore  README.md  config.py  file_migration_report.md  main.py  pillars_test_results.json  pyproject.toml  requirements.txt  run_tests.py
backend/app/: __init__.py
backend/config/: __init__.py  config.py
backend/core/: calendar_algorithm_core.py  liuyao_algorithm_core.py
backend/docs/: README.md  backend_frame_work_readme.md  calendar_api_data_format.md  component_deprecation_notice.md  emergency_plan.md  liuyao_api_data_format.md  liuyao_backend_rewrite_plan.md
backend/scripts/: add_admin_password_column.py  add_common_sensitive_words.py  add_fortune_modify_fields.py  add_name_fields.py  add_nickname_modify_fields.py  add_system_reserved_words.py  add_virtual_gender_column.py  analyze_conversion_errors.py  check_admin_pass.py  check_db.py  cleanup_sensitive_nicknames.py  compare_calculators.py  create_sensitive_word_tables.py  debug_pillars_validation.py  debug_routes.py  manual_time_validation_test.py  migrate_fortune_modify_fields.py  repair_db.py  rollback_components.py  verify_sensitive_words.py
backend/temp_tests/: 111.json  README.md  __init__.py  accuracy_verification.py  lunar_library_test.py  (+6 more)
(+670 files in other folders)
