[tool.poetry]
name = "backend"
version = "0.1.0"
description = "六爻排盘项目后端API"
authors = ["Gordon <gordon_cao@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.133.0"
uvicorn = "0.24.0"
pydantic = ">=2.12.5"
python-dotenv = "1.0.0"
sqlalchemy = "2.0.31"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
lunar-python = "1.4.8"

[tool.poetry.dev-dependencies]
pytest = "^9.0"
pytest-asyncio = "^0.24"
httpx = "^0.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 80